2004-11-15  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: Simplify %type test for main, correct it for
	SplitOffs; implement dpkg install-time script interpretter check
	for SplitOffs.

2004-11-14  Daniel Macks  <dmacks@netspace.org>

	* NetAccess.pm: Fix my fix to regex.

2004-11-14  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: Error if %type_ *anywhere* but not InfoN>=2.

2004-11-14  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm, CLI.pm: More comprehensive trapping of SIGINT.
	* NetAccess.pm, Package.pm, Services.pm, Validation.pm: Use \#
	instead of # and \Z instead of $ in some regex to make emacs paren
	balancer happy.

2004-11-12  Daniel Macks  <dmacks@netspace.org>

	* CLI.pm: Refactored gathering of user input. All prompt_*() now
	hand off to new get_input() (semi-revival from Services.pm from
	before CLI/Services split), which propagate control-C and other
	exceptions correctly during blocking and non-blocking input.

2004-11-12  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* SelfUpdate.pm: Don't automatically update gettext-bin
	
2004-11-09  Daniel Macks  <dmacks@netspace.org>

	* Mirror.pm: Re-reworded menu b/c must match /^Custom/
	* CLI.pm: During blocking user input, propagate control-C as die()

2004-11-08  Daniel Macks  <dmacks@netspace.org>

	* Mirror.pm: Clarified menu wording for CustomMirror set.

2004-11-07  Peter O'Gorman  <ogorman@users.sourceforge.net>

	* Bootstrap.pm: We work with 10.3.6.

2004-11-06  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: Corrected regex in dpkg install-time script
	interpretter check.

2004-11-05  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: Complain about writing (Pre|Post)(Inst|Rm)Script
	with explicit #! call. Use \Z instead of $ so can remove emacs
	paren balancing hack.

2004-11-04  Christian Schaffner  <chris01@users.sourceforge.net>

	* Engine.pm: Add a '--recursive' option to the remove and purge commands,
	  which makes fink use 'apt-get remove'.