@@ -1,5 +1,10 @@
 2004-11-15  Daniel Macks  <dmacks@netspace.org>
 
+	* Engine.pm, PkgVersion.pm: Implemented build-time locking
+	of dependencies via fink-buildlock-* packages.
+
+2004-11-15  Daniel Macks  <dmacks@netspace.org>
+
 	* Validation.pm: Simplify %type test for main, correct it for
 	SplitOffs; implement dpkg install-time script interpretter check
 	for SplitOffs.
